# neutron-secretvrf

./: .gitignore  Cargo.toml  README.md  buildprod.sh
artifacts/: checksums.txt  neutronscrtvrf.wasm
src/: contract.rs  error.rs  msg.rs  state.rs
