[package]
name = "neutronscrtvrf"
version = "2.0.1"
authors = ["deploydon"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
#backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = { version = "2.1.0", default-features = false }
cosmwasm-std = "2.1.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
thiserror =  "1.0.49" 
neutron-sdk = {git = "https://github.com/neutron-org/neutron-sdk", branch = "main"}
sha2 = "0.10.8"
base64 = "0.22.1"